fixed chart size

--- a/Pre_Processing/sentAnalysis/Chart/Chart.html
+++ b/Pre_Processing/sentAnalysis/Chart/Chart.html
@@ -38,6 +38,8 @@
 			]
     	},
     	options: {
+				maintainAspectRatio: false,
+			responsive: true,
         	scale: {
 	            display: true
         	}
