fixed fonts for labels

--- a/Pre_Processing/sentAnalysis/Chart/Chart.html
+++ b/Pre_Processing/sentAnalysis/Chart/Chart.html
@@ -41,8 +41,12 @@
 				maintainAspectRatio: false,
 			responsive: true,
         	scale: {
-	            display: true
-        	}
+	            display: true,
+				pointLabels: { fontSize:16 }
+        	},
+			legend: {
+				labels: { fontSize:16 }
+			},
     	}
    });
 	</script>
