--- a/Pre_Processing/sentAnalysis/Chart/Chart.html
+++ b/Pre_Processing/sentAnalysis/Chart/Chart.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="utf-8"/>
-	<title>Occurances of 5 Diffrent Twitter Hashtags</title>
+	<title>Canada Sentiment Analysis</title>
 	<script type="text/javascript" src="js/Chart.bundle.js"></script>
 
 
