made average and percentage processing

--- a/Pre_Processing/sentAnalysis/Chart/Chart.html
+++ b/Pre_Processing/sentAnalysis/Chart/Chart.html
@@ -34,6 +34,12 @@
 				borderColor: 'rgba(128,128,128,1)',
             	data: [362,35,858,10,497,26,189,1406,950,2848,1034,125,75,104,19,0,9,0],
 				label: 'Neutral'
+				},
+				{
+				backgroundColor: 'rgba(0, 255, 255, 0.2)',
+				borderColor: 'rgba(0,255,255,1)',
+            	data: [1346,156,2189,343,1820,362,737,2085,1935,2848,1034,125,75,104,19,0,9,0],
+				label: 'Average'
 				}
 			]
     	},
