--- a/RGB/RBG_chart.html
+++ b/RGB/RBG_chart.html
@@ -4,54 +4,64 @@
     <head>
         <meta charset="utf-8"/>
         <title>Most Common Thumbnail colors</title>
-        <script src='static/Chart.js'> </script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
+        <script src='js/Chart.bundle.js'> </script>
 
     </head>
 
     <body>
-        <center>
-            <h2>Most Common Thumbnail colors</h2>
-            <div style="width:700px;height=500px">
-                <canvas id="chart"></canvas>
-            </div>
-        </center>
-            <script>
-                var ctx = document.getElementById("myChart").getContext('2d');
-                var mydoughnutChart = new Chart(ctx, {
-                    type: 'doughnut',
-                    data: {
-                        labels: ["black", "blue", "brown", "green", "grey", "orange", "purple", "red", "white", "yellow"],
-                        datasets: [{
-                            label: 'Most Common Thumbnail colors',
-                            data: [10388, 5113, 1295, 1079, 12000, 60, 1180, 289, 3129, 801],
-                            backgroundColor: [
-                                'rgba(0, 0, 0)',
-                                'rgba(0, 0, 235)',
-                                'rgba(133, 87, 35)',
-                                'rgba(57, 255, 20)',
-                                'rgba(213, 213, 213)', 
-                                'rgba(255, 92, 0)', 
-                                'rgba(149, 33, 246)',
-                                'rgba(255 , 0, 0)',
-                                'rgba(255, 255, 255)',
-                                'rgba(255, 255, 0)'
-                            ]
-                        }]
-                    },
-                    options: {
-                        scales: {
-                            yAxes: [{
-                                ticks: {
-                                    beginAtZero:true
-                                }
-                            }]
-                        }
-                    }
-                });
-            </script>
-
+	<center>
+        <h2>Most Common Thumbnail colors</h2> 
+	</center>
+		<canvas id="chart" style="display: block; width: 800px; height: 800px;"></canvas>
+	<script>
+		var ctx = document.getElementById("chart").getContext('2d');
+		var mydoughnutChart = new Chart(ctx, {
+			type: 'doughnut',
+			data: {
+				labels: ["black", "blue", "brown", "green", "grey", "orange", "purple", "red", "white", "yellow"],
+				datasets: [{
+					label: 'Most Common Thumbnail colors',
+					data: [10388, 5113, 1295, 1079, 12000, 60, 1180, 289, 3129, 801],
+					backgroundColor: [
+						'rgba(0, 0, 0)',
+						'rgba(0, 0, 235)',
+						'rgba(133, 87, 35)',
+						'rgba(57, 255, 20)',
+						'rgba(213, 213, 213)', 
+						'rgba(255, 92, 0)', 
+						'rgba(149, 33, 246)',
+						'rgba(255 , 0, 0)',
+						'rgba(255, 255, 255)',
+						'rgba(255, 255, 0)'
+					]
+				}]
+			},
+			options: {
+				scales: {
+					yAxes: [{
+						ticks: {
+							display: false,
+						},
+						gridLines: {
+							display: false
+						}
+					}],
+					xAxes: [{
+						ticks: {
+							display:false
+						},
+						gridLines: {
+							display:false
+						}
+					}]
+				},
+				legend: {
+					labels: { fontSize:16 }
+				}
+			}
+		});
+	</script>
+	</body>
 
     </body>
 </html>
